# XingLing-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_chinese.md  get_ids.py  main.py  test.py  test_speed.py
Qwen3-8B-Tokenizer/: chat_template.jinja
include/: inference.h  ops.h  tensor.h  tests.h  utils.h
scripts/: export_weights.py
src/: attn.cu  bindings.cpp  embedding.cu  ffn.cu  inference.cpp  inference.cu  linear.cu  ops.cpp  rmsnorm.cu  rope.cu  tensor.cpp  tensor.cu  transformer.cu
tests/: test.cu  test_attentionblock.cu  test_attn.cu  test_embedding.cu  test_engine.cpp  test_linear.cu  test_ops.cpp  test_ops1.cpp  test_ops2.cpp  test_rmsnorm.cu  test_rope.cu  test_swishglu.cu  test_tensor.cpp  test_transformer.cu  test_transformerblock.cu
